[workspace]
members = ["crates/*"]
resolver = "3"
default-members = ["crates/client"]

[workspace.dependencies]
bevy = "0.17"
bevy_asset_loader = "0.24.0-rc.1"
leafwing_manifest = "0.5"
bevy_egui = "0.38"
bevy-inspector-egui = "0.35"
bevy_enhanced_input = "0.20"


[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
