[package]
name = "moonlit-client"
edition = "2024"
version = "0.1.0"

[dependencies]
bevy = { workspace = true }
bevy_egui = { workspace = true }
bevy-inspector-egui = { workspace = true }
bevy_enhanced_input = { workspace = true }
bevy_asset_loader = { workspace = true }
leafwing_manifest = { workspace = true }
serde = { workspace = true }
ron = { workspace = true }

[features]
default = []
dev = ["bevy/dynamic_linking"]
